<resources>
    <string name="app_name">lovetaxi2</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="name">姓名</string>
    <string name="text1">手机号码</string>
    <string name="text3">身份类型</string>
    <string name="sex">性别</string>
    <string name="text4">身份证号</string>
    <string name="usedpassword">旧密码</string>
    <string name="newpassword">新密码</string>
    <string name="order_name">预约姓名:</string>
    <string name="phone">手机号码:</string>
    <string name="order_peroid">预约时段:</string>
    <string name="currentdate">出发日期:</string>
    <string name="start_time">出发时间:</string>
    <string name="start_location">始发地:</string>
    <string name="end_location">目的地:</string>
    <string name="requst_order">提交订单</string>
    <string name="cancel">取消</string>
    <string-array name="orderperoid1">
        <item>明天</item>
        <item>两天后</item>
        <item>五天后</item>
        <item>十天后</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
