<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background2">

    <TableRow>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_time"  >
    </TextView>

        <EditText
            android:id="@+id/starttime"
            android:layout_width="316dp"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:text=""></EditText>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_location"  >
        </TextView>
        <EditText
            android:id="@+id/startlocationEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text=""  >
        </EditText>
    </TableRow>
    <TableRow>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_location"  >
    </TextView>

        <EditText
            android:id="@+id/endlocationEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text=""></EditText>
    </TableRow>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/submitButton"
            android:text="@string/requst_order"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>


</TableLayout>