<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0C0C0"
    android:orientation="vertical" >
    <include layout="@layout/title1_layout"></include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#FFFFFF"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/lyphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0.1dp"
            android:background="#FFFFFF"
            android:gravity="left"
            android:paddingTop="12dp"
            android:hint="@string/text1"
            android:textSize="20sp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/lysex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0.1dp"
            android:background="#FFFFFF"
            android:gravity="left"
            android:paddingTop="12dp"
            android:hint="@string/sex"
            android:textSize="20sp"
             />

        <EditText
            android:id="@+id/lyidcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="left"
            android:paddingTop="12dp"
            android:hint ="@string/text4"
            android:textSize="20sp"
             />
        <EditText
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0.1dp"
            android:background="#FFFFFF"
            android:gravity="left"
            android:hint="@string/text3"
            android:paddingTop="12dp"
            android:textSize="20sp"
           />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/save"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="#008000"
            android:gravity="center"
            android:text="保存修改"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>